--- a/use.css
+++ b/use.css
@@ -20,8 +20,7 @@
 .media img {
 	width: auto;
 	height: 25em;
-	margin-left: 2%;
-	margin-top: 2%;
+	margin: 2%;
 }
 
 input {
@@ -39,7 +38,8 @@ input {
 }
 
 input[type="submit"],
-button {
+button,
+#profile-dropdown {
 	background-color: #00e8cc;
 	text-decoration: none;
 	border: none;
@@ -78,4 +78,55 @@ p {
 	display: flex;
 	align-items: center;
 	flex-wrap: wrap;
+}
+
+/* profile stuff*/
+#profile {
+	position: relative;
+}
+#profile-pic {
+	border-radius: 5px;
+	margin: 3px;
+}
+
+#profile-button {
+	display: flex;
+	align-items: center;
+	font-size: 80%;
+}
+
+#profile-button.active {
+	border-bottom-left-radius: 0;
+	margin-bottom: 0;
+}
+
+#profile-dropdown {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-between;
+	/*background-color: rgb(8, 170, 151);*/
+	position: absolute;
+	left: auto;
+	right: 0;
+	z-index: 1;
+	padding: 0;
+	margin-top: 2px;
+}
+
+#logout-button {
+	align-self: stretch;
+	border-top-left-radius: 0;
+	border-top-right-radius: 0;
+	padding: 1%;
+	font-size: 80%;
+}
+
+#login-text,
+#profile-name {
+	color: black;
+	font-size: 60%;
+	margin: 0 3px;
+	padding: 0 2%;
+	text-align: center;
 }
