--- a/use.css
+++ b/use.css
@@ -20,34 +20,33 @@
 .media img {
 	width: auto;
 	height: 25em;
-	margin: 2%;
-}
-
-input {
-	font-family: "Source Sans Pro", sans-serif;
+	margin: 5px 0;
 }
 
 #guess {
-	flex-basis: max(40%, 320px);
+	flex-basis: 40%;
 	flex-grow: 1;
-	width: 50%;
+	width: 40%;
 	padding: 1%;
 	font-size: 140%;
 	float: left;
-	margin-right: 0.5%;
+	margin-right: 3px;
+	margin-bottom: 3px;
 }
 
+#controls {
+	display: inline-flex;
+	align-items: center;
+	flex-wrap: wrap;
+}
 input[type="submit"],
 button,
 #profile-dropdown {
 	background-color: #00e8cc;
 	text-decoration: none;
 	border: none;
-	padding-top: 0.5%;
-	padding-bottom: 0.5%;
-	padding-right: 2%;
-	padding-left: 2%;
-	margin: 0.5%;
+	padding: 0.5% 2%;
+	margin: 3px;
 	font-size: 110%;
 	border-radius: 5px;
 	text-align: center;
@@ -74,14 +73,10 @@ p {
 	margin-block-end: 0.5em;
 }
 
-#input-fields {
-	display: flex;
-	align-items: center;
-	flex-wrap: wrap;
-}
 #login-button:hover {
 	color: black;
 }
+
 /* profile stuff*/
 #profile {
 	position: relative;
@@ -107,7 +102,6 @@ p {
 	flex-direction: column;
 	align-items: center;
 	justify-content: space-between;
-	/*background-color: rgb(8, 170, 151);*/
 	position: absolute;
 	left: auto;
 	right: 0;
@@ -120,6 +114,7 @@ p {
 	align-self: stretch;
 	border-top-left-radius: 0;
 	border-top-right-radius: 0;
+	border-top: 1.5px solid #e1e4e8;
 	padding: 1%;
 	font-size: 80%;
 }
@@ -135,4 +130,15 @@ p {
 #profile-button,
 #profile-dropdown {
 	display: none;
+}
+/* small screen stuff */
+@media (max-width: 480px) {
+	#guess {
+		align-self: stretch;
+		width: 95%;
+	}
+	.media img {
+		width: 95vw;
+		height: auto;
+	}
 }
