--- a/public/style.css
+++ b/public/style.css
@@ -2,7 +2,7 @@
 	font-family: "Source Sans Pro", sans-serif;
 }
 
-body.night {
+html.night body {
 	background-color: #001a25;
 	transition: 0.5s;
 }
@@ -41,7 +41,7 @@ a:visited {
 	transition: 0.5s;
 }
 
-body.night #navigator {
+html.night #navigator {
 	background-color: #00151f;
 	border-bottom: solid white 2px;
 	color: white;
@@ -67,7 +67,7 @@ body.night #navigator {
 .nav-link:visited {
 	color: black;
 }
-body.night .nav-link {
+html.night .nav-link {
 	color: white;
 	transition: 0.5s;
 }
@@ -84,7 +84,7 @@ body.night .nav-link {
 	text-align: center;
 }
 
-body.night .button strong {
+html.night .button strong {
 	color: black;
 	transition: 0.5s;
 }
@@ -102,7 +102,7 @@ body.night .button strong {
 	font-size: 120%;
 }
 
-body.night {
+html.night body {
 	color: white;
 }
 
