--- a/public/style.css
+++ b/public/style.css
@@ -1,151 +1,158 @@
 * {
-	font-family: "Source Sans Pro", sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
 }
 
 html.night body {
-	background-color: #001a25;
-	transition: 0.5s;
+  background-color: #001a25;
+  transition: 0.5s;
 }
 
 body {
-	background-color: white;
-	transition: 0.5s;
+  background-color: white;
+  transition: 0.5s;
 }
 
 a {
-	color: #ff4365;
-	text-decoration: none;
+  color: #ff4365;
+  text-decoration: none;
 }
 
 a:hover {
-	color: rgb(255, 138, 160);
+  color: rgb(255, 138, 160);
 }
 
 a:visited {
-	color: rgb(212, 57, 86);
+  color: rgb(212, 57, 86);
 }
 /*all navigator stuff*/
 #navigator {
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	align-items: center;
-	width: 98%;
-	padding: 1%;
-	margin-top: 0%;
-	z-index: 1000;
-	font-size: 130%;
-	background-color: white;
-	border-bottom: solid black 2px;
-	color: black;
-	transition: 0.5s;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  width: 98%;
+  padding: 1%;
+  margin-top: 0%;
+  z-index: 1000;
+  font-size: 130%;
+  background-color: white;
+  border-bottom: solid black 2px;
+  color: black;
+  transition: 0.5s;
 }
 
 html.night #navigator {
-	background-color: #00151f;
-	border-bottom: solid white 2px;
-	color: white;
-	transition: 0.5s;
+  background-color: #00151f;
+  border-bottom: solid white 2px;
+  color: white;
+  transition: 0.5s;
 }
 #title {
-	flex-grow: 1;
+  flex-grow: 1;
 }
 #links {
-	float: right;
-	text-align: right;
-	width: 60%;
+  float: right;
+  text-align: right;
+  width: 60%;
 }
 
 .nav-link {
-	cursor: pointer;
-	margin: max(5px, 0.5%);
-	padding: 0.5%;
-	color: black;
-	transition: 0.5s;
+  cursor: pointer;
+  margin: max(5px, 0.5%);
+  padding: 0.5%;
+  color: black;
+  transition: 0.5s;
 }
 
 .nav-link:visited {
-	color: black;
+  color: black;
 }
 html.night .nav-link {
-	color: white;
-	transition: 0.5s;
+  color: white;
+  transition: 0.5s;
 }
 
 .button {
-	cursor: pointer;
-	background-color: #00e8cc;
-	padding-top: 0.5%;
-	padding-bottom: 0.5%;
-	padding-right: 3%;
-	padding-left: 3%;
-	border-radius: 5px;
-	transition: 0.5s;
-	text-align: center;
+  cursor: pointer;
+  background-color: #00e8cc;
+  padding-top: 0.5%;
+  padding-bottom: 0.5%;
+  padding-right: 3%;
+  padding-left: 3%;
+  border-radius: 5px;
+  transition: 0.5s;
+  text-align: center;
 }
 
 html.night .button strong {
-	color: black;
-	transition: 0.5s;
+  color: black;
+  transition: 0.5s;
 }
 
 .button:hover {
-	background-color: rgb(8, 170, 151);
+  background-color: rgb(8, 170, 151);
 }
 
 #use-button {
-	color: black;
+  color: black;
 }
 #info {
-	width: 70%;
-	margin: auto;
-	font-size: 120%;
+  max-width: 1080px;
+  margin: 32px auto 128px;
+  padding: 0 20px;
+  font-size: 1.2rem;
+  line-height: 1.5;
+}
+#info p,
+#info h1,
+#info h2 {
+  margin: 0.7em 0 0.5em;
 }
 
 html.night body {
-	color: white;
+  color: white;
 }
 
 h2 {
-	color: #ff4365;
+  color: #ff4365;
 }
 
 mark {
-	color: #ff4365;
-	background-color: transparent;
+  color: #ff4365;
+  background-color: transparent;
 }
 
 /* day night toggle */
 #toggle {
-	flex-basis: 45px;
-	align-self: center;
-	background: #fff;
-	border: 2px solid #00151f;
-	width: 45px;
-	height: 20px;
-	cursor: pointer;
-	border-radius: 20px;
-	transition: 0.5s;
+  flex-basis: 45px;
+  align-self: center;
+  background: #fff;
+  border: 2px solid #00151f;
+  width: 45px;
+  height: 20px;
+  cursor: pointer;
+  border-radius: 20px;
+  transition: 0.5s;
 }
 
 #toggle.active {
-	background: #00151f;
-	border: 2px solid #fff;
+  background: #00151f;
+  border: 2px solid #fff;
 }
 
 #toggle-button {
-	content: "";
-	position: relative;
-	top: 2px;
-	left: 2px;
-	width: 16px;
-	height: 16px;
-	background: #00151f;
-	border-radius: 50%;
-	transition: 0.5s;
+  content: '';
+  position: relative;
+  top: 2px;
+  left: 2px;
+  width: 16px;
+  height: 16px;
+  background: #00151f;
+  border-radius: 50%;
+  transition: 0.5s;
 }
 
 #toggle.active > #toggle-button {
-	left: 27px;
-	background: #fff;
+  left: 27px;
+  background: #fff;
 }
